k8s/01-next-poc-isr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-poc-isr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: next-poc-isr
  template:
    metadata:
      labels:
        app: next-poc-isr
    spec:
      containers:
      - name: next-isr-poc
        image: larturi/next-isr-poc:latest
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "800m"
