k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(_next|static)/(.*)$ /$1/$2 break
spec:
  ingressClassName: nginx
  rules:
  - host: next-poc-isr.larturi.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-poc-isr-svc
            port:
              number: 80
